--- a/src/main/resources/templates/Formulario.html
+++ b/src/main/resources/templates/Formulario.html
@@ -29,11 +29,10 @@
 		</div>
 
 
-		<input type="hidden" th:field="*{codigo}" /> Nome: <input type="text"
-			th:field="*{nome}"> <br> Time: <input type="text"
-			th:field="*{time}"> <br> Data Nascimento: <input
-			type="text" th:field="*{dataNascimento}"> <br> Selecione
-		sua foto: <input type="file" name="imagem"> <br> 
+		<input type="hidden" th:field="*{codigo}" /> 
+		Nome: <input type="text" th:field="*{nome}"> <br> 
+		Data Nascimento: <input type="text" th:field="*{dataNascimento}"> <br> 
+		Selecione sua foto: <input type="file" name="imagem"> <br> 
 		
 		Login: <input type="text" th:field="*{login}"> <br>
 		Senha: <input type="password" th:field="*{senha}"> <br>
