--- a/src/main/resources/templates/CadastrarPrato.html
+++ b/src/main/resources/templates/CadastrarPrato.html
@@ -5,7 +5,7 @@ xmlns:th="http://www.thymeleaf.org">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cadastrar</title>
+    <title>Cadastrar Prato</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/estilo3.css">
     <link rel="stylesheet" href="/css/estilo2.css">
@@ -33,7 +33,7 @@ xmlns:th="http://www.thymeleaf.org">
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="/pedido/meusPedidos">Meus Pedidos</a>
+                               <a class="nav-link" href="/pedido/meusPedidos">Meus Pedidos</a>
                         </li>
                         
                     </ul>
@@ -76,16 +76,13 @@ xmlns:th="http://www.thymeleaf.org">
 	
 		
     <div class="container">
-        <form action="/cliente/salvar" method="POST" class="form-login2" th:object="${cliente}" enctype="multipart/form-data">
+        <form action="/prato/salvar" method="POST" class="form-login2" th:object="${prato}" enctype="multipart/form-data">
         
-            <h2>Cadastre-se</h2>
+            <h2>Cadastrar pratos</h2>
             <input th:field="*{nome}" type="text" name="nome" id="inputNome" class="form-control" placeholder="Nome" required autofocus>
-            <input th:field="*{cpf}" type="text" name="cpf" id="inputCpf" class="form-control" placeholder="CPF" required maxlength="11">
-            <input th:field="*{dataNascimento}" type="text" name="dataNascimento" id="inputDataNasc" class="form-control" placeholder="Data de Nascimento" required maxlength="8" data-mask="00/00/0000">
-            <input th:field="*{endereco}" type="text" name="endereco" id="inputendereco" class="form-control" placeholder="Endereco" required>
-            <input th:field="*{email}" type="email" name="email" id="inputEmail" class="form-control" placeholder="Email" required> 
-            <input th:field="*{senha}" type="password" name="senha" id="inputSenha" class="form-control" placeholder="Senha" required>
-            <button type="submit" class="btn btn-lg btn-primary btn-block"> Cadastrar</button>
+            <input type="file" name="imagem" id="inputCpf" class="form-control" placeholder="imagem">
+            <input th:field="*{preco}" type="number" name="preco" id="inputPreco" class="form-control" placeholder="Preço do prato" required>
+            <button type="submit" class="btn btn-lg btn-primary btn-block"> Cadastrar prato</button>
         </form>
        
     </div>
