--- a/src/main/resources/templates/Inicio.html
+++ b/src/main/resources/templates/Inicio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
-xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +12,7 @@ xmlns:th="http://www.thymeleaf.org">
     
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark" id="menu">
             <div class="container" >
-                <a class="navbar-brand" id="inicio-menu" href="/">Início</a>
+                <a class="navbar-brand" id="inicio-menu" href="/restaurante/">Início</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite">
                     <span class="navbar-toggler-icon"></span>
@@ -23,7 +22,7 @@ xmlns:th="http://www.thymeleaf.org">
                     <ul class="navbar-nav mr-auto">
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Ver pratos</a>
+                            <a class="nav-link" href="/restaurante/verPratos">Ver pratos</a>
                         </li>
 
 
@@ -32,22 +31,22 @@ xmlns:th="http://www.thymeleaf.org">
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#"></a>
+                            <a class="nav-link" href="/pedido/meusPedidos">Meus Pedidos</a>
                         </li>
                         
                     </ul>
 
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto" sec:authorize="hasHole('ROLE_USER')">
 
                             <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="navDrop" href="#"> 
                                         Login/Cadastro</a>
                                     <div class="dropdown-menu" id="form-drop">
                                             <div class="container">
-                                                    <form action="" class="form-login">
+                                                    <form method="POST" class="form-login">
                                                         <h4>Faça login</h4>
-                                                        <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus> 
-                                                        <input type="password" name="senha" id="inputSenha" class="form-control" placeholder="Senha" required>
+                                                        <input type="email" name="username" id="inputEmail" class="form-control" placeholder="Email" required autofocus> 
+                                                        <input type="password" name="password" id="inputSenha" class="form-control" placeholder="Senha" required>
                                                         <button type="submit" class="btn btn-lg btn-primary btn-block" id="botao-login"> Login</button>
                                                         <a class="cadastre-se" href="/cliente/cadastro">Cadastre-se</a> 
                                                         <a class="esqueci-senha" href="/pessoa/redefinir-senha">Esqueci a senha</a> 
@@ -60,7 +59,7 @@ xmlns:th="http://www.thymeleaf.org">
                                 </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#" ><img class="carrinho" src="img/carrinho3.png" alt="Meu carrinho" data-toggle="tooltip" data-placement="bottom" title="Ver carrinho"></a>
+                            <a class="nav-link" href="/carrinho/listar" ><img class="carrinho" src="/img/carrinho3.png" alt="Meu carrinho" data-toggle="tooltip" data-placement="bottom" title="Ver carrinho"></a>
                     </li>
 
                     
